--- a/public_html/templates/index.html
+++ b/public_html/templates/index.html
@@ -66,7 +66,7 @@
 							       disabled>
 						{% elseif row.status == 'false' %}
 							<input type="button" id="{{ 'success' ~ row.ithenticate_id }}"
-							       class="btn btn-success btn-block"
+							       class="btn btn-secondary btn-block"
 							       title="The edit was a copyright violation and has been reverted" value="Page fixed"
 							       disabled>
 							<input type="button" id="{{ 'danger' ~ row.ithenticate_id }}"
