--- a/public_html/templates/base.html
+++ b/public_html/templates/base.html
@@ -6,7 +6,7 @@
 	{% block stylesheets %}
 		<link href="//tools-static.wmflabs.org/cdnjs/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css"
 		      rel="stylesheet"/>
-		<link href="{{ siteUrl('css/index.css') }}" type="text/css" rel="stylesheet"/>
+		<link href="index.css" type="text/css" rel="stylesheet"/>
 	{% endblock %}
 	{% block scripts %}
 		<script src="//tools-static.wmflabs.org/cdnjs/ajax/libs/jquery/1.12.0/jquery.min.js"
