--- a/public_html/templates/base.html
+++ b/public_html/templates/base.html
@@ -42,7 +42,8 @@
 				<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
 				<strong>Hello!</strong> This is a web-version of Plagiabot. Database writes for this tool are <b>now
 					enabled</b>. You can start conducting reviews after you log in. You can drop your feedback
-				<a href="https://en.wikipedia.org/wiki/User_talk:EranBot/Copyright/rc"> here</a>.
+				<a href="https://meta.wikimedia.org/wiki/Talk:Community_Tech/Improve_the_plagiarism_detection_bot">
+					here</a>.
 			</div>
 			{% block flashes %}
 				{% if flash|default(false) %}
