Add info about Plagiabot vs Copypatrol to banner

--- a/public_html/templates/base.html
+++ b/public_html/templates/base.html
@@ -41,9 +41,12 @@
 			<div class="alert alert-warning alert-dismissable">
 				<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
 				<strong>Hello!</strong> This is a web-version of Plagiabot. Database writes for this tool are <b>now
-					enabled</b>. You can start conducting reviews after you log in. You can drop your feedback
+					enabled</b>. You can start conducting reviews after you log in.
 				<a href="https://meta.wikimedia.org/wiki/Talk:Community_Tech/Improve_the_plagiarism_detection_bot">
-					here</a>.
+					You can drop your feedback here</a>. <a href="https://tools.wmflabs.org/copypatrol/">Copypatrol</a>
+				is our live, ready-to-use
+				tool, while <a href="https://tools.wmflabs.org/plagiabot/">Plagiabot</a> is our testing playground.
+				Please do not use Plagiabot to record your edits.
 			</div>
 			{% block flashes %}
 				{% if flash|default(false) %}
