Add ability to undo your reviews
Rework how review states are handled on clientside using Less

Also includes code from https://github.com/Niharika29/PlagiabotWeb/pull/8

Bug: T134597

--- a/public_html/templates/base.html
+++ b/public_html/templates/base.html
@@ -80,7 +80,7 @@
 
 	<section class="filters container-fluid">
 		<form>
-			<fieldset class="form-group filters-fieldset">
+			<fieldset class="form-group filters-fieldset text-center">
 				{% for type, description in filterTypes %}
 					<span class="radio-inline">
 						<label>
