update 'editor not found' explanation

--- a/public_html/templates/index.html
+++ b/public_html/templates/index.html
@@ -57,7 +57,7 @@
 							{% else %}
 								<span class="glyphicon glyphicon-exclamation-sign"></span>
 								<div class="text-muted" data-toggle="tooltip" data-placement="bottom"
-									title="This usually means that the editor was anonymous. It may also mean that the data is not available in Labs database yet."
+									title="The revision may have been deleted or the data is not yet available in Labs database."
 								>
 									Editor not found
 								</div>
