--- a/src/Less/index.less
+++ b/src/Less/index.less
@@ -114,7 +114,7 @@
 /** record styles and state changes */
 .record {
   border-bottom: 1px dashed darkgrey;
-  padding: 10px;
+  padding: 10px 0;
 }
 
 .record-status-open {
@@ -239,10 +239,19 @@
   }
 }
 
+.status-div {
+  padding: 0;
+
+  .btn {
+    margin-left: auto;
+    margin-right: auto; // margin-top and margin-bottom need to inherit
+    max-width: 200px; // don't make it ridiculously big
+  }
+}
+
 .status-div-reviewer {
   margin-top: 10px;
   text-align: center;
-  white-space: nowrap;
 }
 
 .none {
