--- a/src/Less/index.less
+++ b/src/Less/index.less
@@ -86,6 +86,18 @@
   margin: auto;
 }
 
+// fix bootstrap weirdness around radio buttons
+.filters-fieldset {
+  .radio-inline {
+    margin-left: 30px;
+    padding: 0;
+  }
+
+  label {
+    margin: 0;
+  }
+}
+
 /** button styles */
 .btn {
   .transition(background linear 350ms);
