Wrap long IPv6 editor IPs

--- a/src/Less/index.less
+++ b/src/Less/index.less
@@ -34,13 +34,22 @@
 
 // WebKit
 @-webkit-keyframes spin {
-  from  { transform: rotate(0deg); }
-  to    { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
+
 // Spec and IE10+
 @keyframes spin {
-  from  { transform: rotate(0deg); }
-  to    { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 /* Glyphicons supported by http://glyphicons.com via Bootstrap */
@@ -63,6 +72,10 @@
 }
 
 .page-div {
+  word-wrap: break-word;
+}
+
+.report-div {
   word-wrap: break-word;
 }
 
