--- a/public_html/templates/index.html
+++ b/public_html/templates/index.html
@@ -15,19 +15,22 @@
 {% block records %}
 	{% if records is not empty %}
 		{% for row in records %}
-			<article class="js-record record record-status-{{ row.status ? row.status : 'open' }} record-{{ row.ithenticate_id }}" data-status="{{ row.status }}">
+			<article
+					class="js-record record record-status-{{ row.status ? row.status : 'open' }} record-{{ row.ithenticate_id }}"
+					data-status="{{ row.status }}">
 				<div class="row-container clearfix">
 					{# Div for page title #}
 					<div class="row-div col-sm-3 page-div">
 						<strong>
 							<a href='{{ row.page_link }}' target="_blank"
-								class="{{ row.page_dead ? 'text-danger' : '' }}"
+							   class="{{ row.page_dead ? 'text-danger' : '' }}"
 							>
 								{{ row.page_title }}
 							</a>
 						</strong>
 						<div class="small">
-							<a href='{{ row.history_link }}' target="_blank" class="{{ row.page_dead ? 'text-danger' : '' }}">History</a>
+							<a href='{{ row.history_link }}' target="_blank"
+							   class="{{ row.page_dead ? 'text-danger' : '' }}">History</a>
 						</div>
 					</div>
 					{# Div for diff information and link #}
@@ -41,10 +44,12 @@
 					{# Div for editor information #}
 					<div class="row-div col-sm-2 text-center report-div">
 						{% if row.editor %}
-							<a href='{{ row.editor_page }}' class="{{ row.editor_page_dead ? 'text-danger' : '' }}" target="_blank">{{ row.editor }}</a>
+							<a href='{{ row.editor_page }}' class="{{ row.editor_page_dead ? 'text-danger' : '' }}"
+							   target="_blank">{{ row.editor }}</a>
 							<br/>
 							<small>
-								<a href='{{ row.editor_talk }}' class="{{ row.editor_talk_dead ? 'text-danger' : '' }}" target="_blank">Talk</a>
+								<a href='{{ row.editor_talk }}' class="{{ row.editor_talk_dead ? 'text-danger' : '' }}"
+								   target="_blank">Talk</a>
 								|
 								<a href='{{ row.editor_contribs }}' target="_blank">
 									Contributions
@@ -56,7 +61,7 @@
 						{% else %}
 							<span class="glyphicon glyphicon-exclamation-sign"></span>
 							<div class="text-muted" data-toggle="tooltip" data-placement="bottom"
-								title="The revision may have been deleted or the data is not yet available in Labs database."
+							     title="The revision may have been deleted or the data is not yet available in Labs database."
 							>
 								Editor not found
 							</div>
@@ -71,16 +76,16 @@
 					</div>
 					<div class="row-div col-sm-2 text-center status-div">
 						<button data-id="{{ row.ithenticate_id }}"
-							data-status="fixed"
-							class="btn btn-success btn-block btn-fixed js-save-state {{ user ? 'clickable' : '' }}"
-							title="The edit was a copyright violation and has been reverted"
+						        data-status="fixed"
+						        class="btn btn-success btn-block btn-fixed js-save-state {{ user ? 'clickable' : '' }}"
+						        title="The edit was a copyright violation and has been reverted"
 						>
 							Page fixed
 						</button>
 						<button data-id="{{ row.ithenticate_id }}"
-							data-status="false"
-							class="btn btn-danger btn-block btn-no-action js-save-state {{ user ? 'clickable' : '' }}"
-							title="The edit is a false positive, nothing needs to be done"
+						        data-status="false"
+						        class="btn btn-danger btn-block btn-no-action js-save-state {{ user ? 'clickable' : '' }}"
+						        title="The edit is a false positive, nothing needs to be done"
 						>
 							No action needed
 						</button>
@@ -93,8 +98,8 @@
 						{% for copy in row.copyvios %}
 							<div class="compare-div ellipsis">
 								<button class="btn btn-xs btn-primary dropdown-toggle compare-button js-compare-button"
-									data-id="{{ row.ithenticate_id }}" data-index="{{ loop.index }}"
-									data-copyvio="{{ copy }}" data-diffId="{{ row.diff }}"
+								        data-id="{{ row.ithenticate_id }}" data-index="{{ loop.index }}"
+								        data-copyvio="{{ copy }}" data-diffId="{{ row.diff }}"
 								>
 									<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
 									Compare
@@ -110,7 +115,7 @@
 									<div class="compare-pane-right">
 										<h4 class="compare-pane-title">Source</h4>
 										<div class="compare-pane-right-body compare-pane-body">
-											<span class="text-muted">Loading copyvio source...</span>
+											<span class="text-muted">Loading possible copyvio source...</span>
 										</div>
 									</div>
 								</div>
